# dji-log-viewer

./: Cargo.toml  README.md  index.html
assets/: manifest.json  sw.js
src/: app.rs  flight_data.rs  load_file.rs  main.rs  settings.rs
